feat: support resend verification codes, change at signup
Squashed commit of the following:

commit 71230822f677dbce1056268e048f12e3bca75f46
Author: Raymond Penners <raymond.penners@intenct.nl>
Date:   Thu May 8 09:40:51 2025 +0200

    docs: wrap up resend/change

commit f37fe88d4ebb1bb58fb2dd5a57bb39cca1a1d2fa
Author: Raymond Penners <raymond.penners@intenct.nl>
Date:   Thu May 8 09:28:41 2025 +0200

    feat(headless): resend verification codes

commit ab94d11b9a83f69afc7c59a4fdd0d19cca59c71c
Author: Raymond Penners <raymond.penners@intenct.nl>
Date:   Wed May 7 21:27:32 2025 +0200

    feat(headless): change email/phone during signup

commit cc9c41073088b73c3ea1eb32f91f4f08c018f277
Author: Raymond Penners <raymond.penners@intenct.nl>
Date:   Wed May 7 20:06:52 2025 +0200

    fix(headless): change into conflicting phone broken

commit 08ab36d3066cfdda541e42ddba414be6ce9d3ab2
Author: Raymond Penners <raymond.penners@intenct.nl>
Date:   Wed May 7 17:49:14 2025 +0200

    refactor(templates): extract <details> element

commit 52e704467a4f20f6584809c6f770d3431aef21d8
Author: Raymond Penners <raymond.penners@intenct.nl>
Date:   Wed May 7 17:36:24 2025 +0200

    fix(account): password reset template verify_form

commit cc643598e203ef2e9de7d04f580956e0e484aea7
Author: Raymond Penners <raymond.penners@intenct.nl>
Date:   Wed May 7 17:33:18 2025 +0200

    fix(account): skip enumeration at authenticated change email/phone

commit 4831e76810defc685787694c0e9c6b23e1902fe5
Author: Raymond Penners <raymond.penners@intenct.nl>
Date:   Wed May 7 16:44:00 2025 +0200

    feat(account): proper change_to conflict handling

commit 5577cdc1b8418d2fb71ebbc100c89ab2119e0bcd
Author: Raymond Penners <raymond.penners@intenct.nl>
Date:   Wed May 7 11:29:31 2025 +0200

    feat(account): resend/change limit max count

commit 28e1ffd29fb2019cd9cb8ced21c7d4d85a8f38f0
Author: Raymond Penners <raymond.penners@intenct.nl>
Date:   Tue May 6 17:25:58 2025 +0200

    fix(account): resend rate li
