# allauth/headless/spec/doc/openapi.yaml
@@ -262,6 +262,29 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ConflictResponse"
+  /_allauth/{client}/v1/auth/email/verify/resend:
+    post:
+      tags:
+        - "Authentication: Account"
+      summary: Resend email verification code
+      description: |
+        Requests a new email verification code.
+        Requires `ACCOUNT_EMAIL_VERIFICATION_SUPPORTS_RESEND = True`.
+      parameters:
+        - $ref: "#/components/parameters/Client"
+        - $ref: "#/components/parameters/SessionToken"
+      responses:
+        "200":
+          $ref: "#/components/responses/StatusOK"
+        "409":
+          description: |
+            Conflict. The email verification (by code) flow is not pending.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ConflictResponse"
+        "429":
+          $ref: "#/components/responses/TooManyRequests"
   /_allauth/{client}/v1/auth/phone/verify:
     post:
       tags:
@@ -295,6 +318,29 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ConflictResponse"
+  /_allauth/{client}/v1/auth/phone/verify/resend:
+    post:
+      tags:
+        - "Authentication: Account"
+      summary: Resend phone number verification code
+      description: |
+        Requests a new phone number verification code.
+        Requires `ACCOUNT_PHONE_VERIFICATION_SUPPORTS_RESEND = True`.
+      parameters:
+        - $ref: "#/components/parameters/Client"
+        - $ref: "#/components/parameters/SessionToken"
+      responses:
+        "200":
+          $ref: "#/components/responses/StatusOK"
+        "409":
+          description: |
+            Conflict. The phone verification flow is not pending.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ConflictResponse"
+        "429":
+          $ref: "#/components/responses/TooManyRequests"
   /_allauth/{client}/v1/auth/reauthenticate:
     post:
       tags:
@@ -1024,10 +1070,15 @@ paths:
       tags:
         - "Account: Email"
       summary: |
-        Add an email addresses
+        Add/Change email address
       description: |
-        Add a new email address to the account. The email address will be marked as unverified, and
-        an email verification mail will be sent.
+        The following functionality is available:
+
+          - Adding a new email address for an already signed in user (`ACCOUNT_CHANGE_EMAIL = False`).
+          - Change to a new email address for an already signed in user   (`ACCOUNT_CHANGE_EMAIL = True`).
+          - Change to a new email address during the email verification process at signup (`ACCOUNT_EMAIL_VERIFICATION_SUPPORTS_CHANGE = True`).
+
+        In all cases, an email verification mail will be sent containing a link or code that needs to be verified.
       parameters:
         - $ref: "#/components/parameters/Client"
         - $ref: "#/components/parameters/SessionToken"
@@ -1047,6 +1098,13 @@ paths:
                   $ref: "#/components/examples/InvalidEmail"
         "401":
           $ref: "#/components/responses/AuthenticationOrReauthentication"
+        "409":
+          description: |
+            Conflict. For example, when no user is authenticated and no email verification flow is pending.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ConflictResponse"
     put:
       tags:
         - "Account: Email"
@@ -1151,9 +1209,16 @@ paths:
       summary: |
         Change the phone number
       description: |
-        Initiate the phone number change process. After posting a new phone
-        number, proceed with the phone verification endpoint to confirm the
-        change of the phone number by posting the verification code.
+        The following functionality is available:
+
+        - Initiate the phone number change process for signed in users.
+        - Change to a new phone number during the phone number verification
+          process at signup for unauthenticated users. Note that this requires:
+          `ACCOUNT_PHONE_VERIFICATION_SUPPORTS_CHANGE = True`.
+
+        In both cases, after posting a new phone number, proceed with the phone
+        verification endpoint to confirm the change of the phone number by
+        posting the verification code.
       parameters:
         - $ref: "#/components/parameters/Client"
         - $ref: "#/components/parameters/SessionToken"
@@ -1174,6 +1239,13 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
         "401":
           $ref: "#/components/responses/AuthenticationOrReauthentication"
+        "409":
+          description: |
+            Conflict. For example, when no user is authenticated and no phone verification flow is pending.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ConflictResponse"
   ######################################################################
   # Account: 2FA
   ######################################################################
@@ -3293,6 +3365,20 @@ components:
             properties:
               status:
                 $ref: "#/components/schemas/StatusOK"
+            required:
+              - status
+    TooManyRequests:
+      description: |
+        Too many requests.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                enum:
+                  - 429
             required:
               - status
     TOTPAuthenticator:
